Mejora en la traducción
Cambios en algunas frases para hacer la traducción más homogénea.

--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -816,7 +816,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"repairFee"
  	 	 	 	],
- 	 	 	 	"trans": "Reparar todos los objetos por (${repairFee} BTC)",
+ 	 	 	 	"trans": "Reparar todos los objetos por (${repairFee} Bitcoins)",
  	 	 	 	"eng": " Repair all items for (${repairFee} Bitcoin)"
  	 	 	},
  	 	 	"unlockContainerButton": {
@@ -1224,7 +1224,7 @@
  	 	 	 	 	 	"eng": "Cyberspace breach in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Une fuerzas con jugadores para infiltrarte en la Fortaleza de Datos-SL y otorgar una mejora a todos los Netrunners",
+ 	 	 	 	 	 	"trans": "Une fuerzas con otros jugadores para infiltrarte en la Fortaleza de Datos-SL y otorgar una mejora a todos los jugadores",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
@@ -1595,7 +1595,7 @@
  	 	 	},
  	 	 	"playerPopup": {
  	 	 	 	"viewProfile": {
- 	 	 	 	 	"trans": "Ver el Perfil",
+ 	 	 	 	 	"trans": "Ver Perfil",
  	 	 	 	 	"eng": "View Profile"
  	 	 	 	},
  	 	 	 	"assignRank": {
@@ -1608,7 +1608,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "¿Deseas expulsar a este jugador de tu Banda?",
+ 	 	 	 	"trans": "¿Quieres expulsar a este jugador de tu Banda?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
@@ -1642,7 +1642,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"deleteGang": {
- 	 	 	 	"trans": "Eliminar la Banda",
+ 	 	 	 	"trans": "Eliminar Banda",
  	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
@@ -1662,7 +1662,7 @@
  	 	 	 	"eng": "Password protected dungeon"
  	 	 	},
  	 	 	"enterDungeon": {
- 	 	 	 	"trans": "Entrar a la Mazmorra",
+ 	 	 	 	"trans": "Entrar a Mazmorra",
  	 	 	 	"eng": "Enter Dungeon"
  	 	 	},
  	 	 	"listButton": {
@@ -1671,7 +1671,7 @@
  	 	 	 	 	"eng": "Dungeons"
  	 	 	 	},
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "En las Mazmorras, no te sanarás luego de cada pelea. Los enemigos son más fuertes, pero hay más EXP y botínes",
+ 	 	 	 	 	"trans": "En las Mazmorras, no te sanarás después de cada pelea, y los enemigos son más fuertes, pero hay más EXP y botínes",
  	 	 	 	 	"eng": "In dungeons, you will not heal after each fight, and enemies are stronger, but there are more exp and loots"
  	 	 	 	}
  	 	 	},
@@ -3349,7 +3349,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "Recibirás EXP, BTC y botín cuando derrotes a los enemigos. \n                 ¡Inténtalo!",
+ 	 	 	"trans": "Recibirás EXP, Bitcoin y botín cuando derrotes a los enemigos. \n                 ¡Inténtalo!",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\r\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -4627,7 +4627,7 @@
  	 	 	 	"eng": "Hash Processor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Se puede usar como hardware dedicado para minar BTC, \r\n        aunque debido al overclocking, el procesador se sobrecalienta con facilidad,\r\n        Puedes usarlos para minar BTC en el Área Comercial de Shangri-La",
+ 	 	 	 	"trans": "Se puede usar como hardware dedicado para minar Bitcoin, \r\n        aunque debido al overclocking, el procesador se sobrecalienta con facilidad,\r\n        Puedes usarlos para minar Bitcoin en el Área Comercial de Shangri-La",
  	 	 	 	"eng": "Can be used as a dedicated hardware for BitCoin mining, \r\n        however due to overclocking, the processor is easily burntout,\r\n        You may use this to mine BitCoin at [JOB HUB]"
  	 	 	}
  	 	},
@@ -4637,7 +4637,7 @@
  	 	 	 	"eng": "Synaptic Acceleration Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Transmite exploits a todos los Netrunners conectados, overclockea sus procesadores sinápticos, lo que permite una capacidad mental superhumana por un corto periodo de tiempo.\r\n        \r\n        Otorga una Mejora Global a todos los Netrunners cuando se usa, permitiéndoles completar Trabajos AFK un +5% más rápido durante 10 minutos (acumulable)",
+ 	 	 	 	"trans": "Transmite exploits a todos los usuarios ciberneticamente conectados, overclockea sus procesadores sinápticos, lo que permite una capacidad mental superhumana por un corto periodo de tiempo.\r\n        \r\n        Otorga una Mejora Global a todos los jugadores en línea cuando se usa, permitiéndoles completar Trabajos AFK un +5% más rápido durante 10 minutos (acumulable)",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, overclocking their synaptic processors thus allowing super-human mental capacity for short period of time.\r\n        \r\n        When used, gives Global Buff to all players online, allowing them to complete AFK tasks in +5% speed for 10 minutes (stackable)"
  	 	 	}
  	 	},
@@ -4647,7 +4647,7 @@
  	 	 	 	"eng": "Rare Synaptic Acceleration Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Transmite exploits a todos los Netrunners conectados, overclockea sus procesadores sinápticos permitiendo una capacidad mental superhumana por un corto periodo de tiempo.\r\n        \r\n        Otorga una Mejora Global a todos los Netrunners en línea cuando se usa, permitiéndoles completar Trabajos AFK un +40% más rápido durante 20 minutos (acumulable)",
+ 	 	 	 	"trans": "Transmite exploits a todos los usuarios ciberneticamente conectados, overclockea sus procesadores sinápticos permitiendo una capacidad mental superhumana por un corto periodo de tiempo.\r\n        \r\n        Otorga una Mejora Global a todos los jugadores en línea cuando se usa, permitiéndoles completar Trabajos AFK un +40% más rápido durante 20 minutos (acumulable)",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, overclocking their synaptic processors thus allowing super-human mental capacity for short period of time.\r\n        \r\n        When used, gives Global Buff to all players online, allowing them to complete AFK tasks in +40% speed for 20 minutes (stackable)"
  	 	 	}
  	 	},
@@ -4657,7 +4657,7 @@
  	 	 	 	"eng": "Frontal Cortex Optimization Transmitter"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Transmite exploits a todos los Netrunners conectados, mejora sus integraciones del Córtex Frontal con cyberwares instalados, lo que permite incrementar la capacidad de memoria del usuario.\r\n\r\n        Al utilizarlo, otorga una Mejora Global a todos los Netrunners en línea, incrementando la EXP ganada en un 180% durante 20 minutos\r\n        ",
+ 	 	 	 	"trans": "Transmite exploits a todos los usuarios ciberneticamente conectados, mejora sus integraciones del Córtex Frontal con cyberwares instalados, lo que permite incrementar la capacidad de memoria del usuario.\r\n\r\n        Al utilizarlo, otorga una Mejora Global a todos los jugadores en línea, incrementando la EXP ganada en un 180% durante 20 minutos\r\n        ",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, enhancing their Frontal Cortex integration with cyberwares installed, thus increasing memory capability of the user.\r\n\r\n        When used, gives Global Buff to all players online, increase EXP gained to 180% for 20 minutes\r\n        "
  	 	 	}
  	 	},
@@ -4670,7 +4670,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currencyName"
  	 	 	 	],
- 	 	 	 	"trans": "Transmite exploits a todos los Netrunners conectados, potencia su algoritmo de intercambio temporalmente, lo que permite a los usuarios recibir un extra de  ${currencyName}.\r\n\r\n        Al utilizarlo, otorga una Mejora Global a todos los Netrunners en línea, incrementando los BTC ganados en un 40% durante 20 minutes (acumulable).\r\n        ",
+ 	 	 	 	"trans": "Transmite exploits a todos los usuarios ciberneticamente conectados, potencia su algoritmo de intercambio temporalmente, lo que permite a los usuarios recibir un extra de  ${currencyName}.\r\n\r\n        Al utilizarlo, otorga una Mejora Global a todos los jugadores en línea, incrementando los Bitcoins ganados en un 40% durante 20 minutes (acumulable).\r\n        ",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, argument their transaction algorithm temporary, allowing user to receive bonus  ${currencyName}.\r\n\r\n        When used, gives Global Buff to all players online, increase BitCoin gained by 40% for 20 minutes (stackable)\r\n        "
  	 	 	}
  	 	},
@@ -4773,7 +4773,7 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"duration"
  	 	 	 	],
- 	 	 	 	"trans": "Contiene fragmentos de avance IA diseñado para ayudar con los equipos de actualización. Cuando se usa, disminuye la posibilidad de falla crítica en ${percent}% (apilable por ${maxStack} veces) por ${duration} minutos. Este efecto se aplicará a todos los Netrunners en línea",
+ 	 	 	 	"trans": "Contiene fragmentos de avance IA diseñado para ayudar con los equipos de actualización. Cuando se usa, disminuye la posibilidad de falla crítica en ${percent}% (apilable por ${maxStack} veces) por ${duration} minutos. Este efecto se aplicará a todos los jugadores en línea",
  	 	 	 	"eng": "Contains fragments of advance AI designed to assist with upgrading equipments. When used, decreases the chance of destructive failure by ${percent}% (stackable for ${maxStack} times) for ${duration} minutes.This effect will apply to all players online"
  	 	 	}
  	 	},
@@ -4874,7 +4874,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [PIRATE]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Módulo de hack que intercepta los paquetes globales del chat y los modifica, realizando un ataque man-in-the-middle. \r\n         Transforma todo conversación en el chat global en idioma pirata. Esto afecta a todos los Netrunners durante 10 minutos",
+ 	 	 	 	"trans": "Módulo de hack que intercepta los paquetes globales del chat y los modifica, realizando un ataque man-in-the-middle. \r\n         Transforma todo conversación en el chat global en idioma pirata. Esto afecta a todos los jugadores durante 10 minutos",
  	 	 	 	"eng": "A exploit module that intercepts global chat packages and modifies it, performing Man-In-The-Middle attack.\r\n        Transforms all speech at global chat to Pirate Speak. This effects all players for 10 minutes"
  	 	 	}
  	 	},
@@ -4884,7 +4884,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [1337]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Módulo de hack que intercepta los paquetes globales de chat y los modifica, realizando un ataque man-in-the-middle. \r\n         Transforma toda conversación en el chat global a L33T SP34K. Esto afecta a todos los Netrunners durante 10 minutos",
+ 	 	 	 	"trans": "Módulo de hack que intercepta los paquetes globales de chat y los modifica, realizando un ataque man-in-the-middle. \r\n         Transforma toda conversación en el chat global a L33T SP34K. Esto afecta a todos los jugadores durante 10 minutos",
  	 	 	 	"eng": "A exploit module that intercepts global chat packages and modifies it, performing Man-In-The-Middle attack.\r\n        Transforms all speech at global chat to l33t Sp34k. This effects all players for 10 minutes"
  	 	 	}
  	 	},
@@ -4904,7 +4904,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "¡Recibe un poco de amor, y tú también recibe un poco de amor! ¡Todos reciban un poco de amor! \r\n         Cuando se usa a todos se aman unos a otros. \r\n         Esto afecta a todos los Netrunners durante 10 minutos",
+ 	 	 	 	"trans": "¡Recibe un poco de amor, y tú también recibe un poco de amor! ¡Todos reciban un poco de amor! \r\n         Cuando se usa a todos se aman unos a otros. \r\n         Esto afecta a todos los jugadores durante 10 minutos",
  	 	 	 	"eng": "You get some love, and you get some love! everyone gets some love!.\r\n        When used everyone loves each other\r\n        This effects all players fow 10 minutes"
  	 	 	}
  	 	},
@@ -5200,7 +5200,7 @@
  	 	 	 	 	"eng": "Go to Shangri-La Market Street"
  	 	 	 	},
  	 	 	 	"tut": {
- 	 	 	 	 	"trans": "Puedes vender o comprar objetos a Netrunners aquí.",
+ 	 	 	 	 	"trans": "Puedes vender o comprar objetos a jugadores aquí.",
  	 	 	 	 	"eng": "You can sell or buy items from other players here"
  	 	 	 	}
  	 	 	},
@@ -5648,7 +5648,7 @@
  	 	 	 	"eng": "initiate crypto mining"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Dedicarte al criptominado te proporcionará BTC, sin embargo, debido al uso intenso de los Procesadores Hash, la Unidad de Procesamiento Cuántico (UPC) se quemará.",
+ 	 	 	 	"trans": "Dedicarte al criptominado te proporcionará Bitcoin, sin embargo, debido al uso intenso de los Procesadores Hash, la Unidad de Procesamiento Cuántico (UPC) se quemará.",
  	 	 	 	"eng": "Engaging in crypto mining will earn you Bitcoins, however due to the intense use of the Hash Processors, the Quantum Processing Unit, otherwise known as the QPU, will often burn out."
  	 	 	}
  	 	},
@@ -5718,7 +5718,7 @@
  	 	 	 	"eng": "Hack SL Data Fortress"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Lanzar un ataque coordinado en el ciberespacio dirigido a la Fortaleza de Datos de Shangri-La \r\n         Si el ataque es exitoso, será posible entrar a la Fortaleza de Datos para transmitir exploits a todos los Netrunners conectados",
+ 	 	 	 	"trans": "Lanzar un ataque coordinado en el ciberespacio dirigido a la Fortaleza de Datos de Shangri-La \r\n         Si el ataque es exitoso, será posible entrar a la Fortaleza de Datos para transmitir exploits a todos los usuarios ciberneticamente conectados",
  	 	 	 	"eng": "Launch a collaborative attack in cyberspace targeting the Shangri-La Data Fortress.\r\nIf the attack succeeds, it’s possible to force the Data Fortress to transmit exploits to all cybernetically connected users."
  	 	 	}
  	 	},
@@ -5851,7 +5851,7 @@
  	 	 	 	 	"eng": "Use global chat"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Chatea con más Netrunners, también puedes buscar el Chat en Español (no se permite spam).",
+ 	 	 	 	 	"trans": "Chatea con más jugadores, también puedes buscar el Chat en Español (no se permite spam).",
  	 	 	 	 	"eng": "Chat with other players, spam not allowed"
  	 	 	 	}
  	 	 	},
@@ -6204,7 +6204,7 @@
  	 	 	 	"eng": "Recommended Level: ${maxLevel}+ with co-op\r\n                    ${expMultiplier}x more EXP!\r\n                    Challenge mode dungeon, extra loot and exp.\r\n                    Drops ${keyFragmentDisplayName}\r\n                    Not advised to enter if your level is too low"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "¿Eres lo bastante fuerte? ¡Compruébalo en una Mazmorra de Desafío!\r\n                        ¡Hay un poderoso Jefe y toneladas de botines esperándote!\r\n                        Se recomienda intentarlo con ayuda de más Netrunners.",
+ 	 	 	 	"trans": "¿Eres lo bastante fuerte? ¡Compruébalo en una Mazmorra de Desafío!\r\n                        ¡Hay un poderoso Jefe y toneladas de botines esperándote!\r\n                        Se recomienda intentarlo con ayuda de más jugadores.",
  	 	 	 	"eng": "Are you strong enough? try it out on Challenge Dungeon,\r\n                        there is a strong boss and tons of loot at the end waiting for you!\r\n                        Its recommended to attempt this with other players."
  	 	 	}
  	 	},
@@ -6440,12 +6440,12 @@
  	 	 	 	"vars": [
  	 	 	 	 	"total"
  	 	 	 	],
- 	 	 	 	"trans": "Costará ${total} BTC en total.",
+ 	 	 	 	"trans": "Costará ${total} Bitcoin en total.",
  	 	 	 	"eng": "it will cost ${total} Bitcoin total"
  	 	 	}
  	 	},
  	 	"notEnoughMoney": {
- 	 	 	"trans": "BTC insuficientes.",
+ 	 	 	"trans": "Bitcoins insuficientes.",
  	 	 	"eng": "Insufficient bitcoin"
  	 	},
  	 	"priceSelectModal": {
@@ -6470,7 +6470,7 @@
  	 	 	"vars": [
  	 	 	 	"total"
  	 	 	],
- 	 	 	"trans": "Si todos los objetos se venden, vas a ganar ${total} BTC en total.",
+ 	 	 	"trans": "Si todos los objetos se venden, vas a ganar ${total} Bitcoins en total.",
  	 	 	"eng": "If all items are sold, you will earn ${total} BitCoins"
  	 	},
  	 	"sellAmountModalTitle": {
@@ -7183,7 +7183,7 @@
  	 	 	 	"trans": "Invitar",
  	 	 	 	"eng": "Invite",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Invita a Netrunners a unirse a tu banda.",
+ 	 	 	 	 	"trans": "Invita a jugadores a unirse a tu banda.",
  	 	 	 	 	"eng": "Invite other players to join your gang."
  	 	 	 	}
  	 	 	},
@@ -7191,7 +7191,7 @@
  	 	 	 	"trans": "Expulsar",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Expulsa a Netrunners de tu banda.",
+ 	 	 	 	 	"trans": "Expulsa a jugadores de tu banda.",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
@@ -7199,7 +7199,7 @@
  	 	 	 	"trans": "Administrar",
  	 	 	 	"eng": "Manage",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Permitir que esta persona administre los permisos de otros Netrunners.",
+ 	 	 	 	 	"trans": "Permitir que esta persona administre los permisos de otros jugadores.",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
  	 	 	}
@@ -7274,11 +7274,11 @@
  	 	 	 	"date",
  	 	 	 	"relative"
  	 	 	],
- 	 	 	"trans": "Adición limitada hasta ${date} (Finaliza en ${relative})",
+ 	 	 	"trans": "Edición limitada hasta ${date} (Finaliza en ${relative})",
  	 	 	"eng": "Limited edition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "Este título nunca caducará. Se quedará en tu cuenta para siempre.",
+ 	 	 	"trans": "Este título nunca caducará.\\nSe quedará en tu cuenta para siempre.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
@@ -7287,7 +7287,7 @@
  	 	 	"vars": [
  	 	 	 	"tierName"
  	 	 	],
- 	 	 	"trans": "Este es un ejemplo de Marco de Chat de Rango ${tierName}.",
+ 	 	 	"trans": "ejemplo de marco de chat de Rango ${tierName}.",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
  	 	}
  	},
@@ -7345,7 +7345,7 @@
  	 	 	 	 	"playerName",
  	 	 	 	 	"price"
  	 	 	 	],
- 	 	 	 	"trans": "Enviar ${donationName} Frame de chat de donación (costo ${price} unidad) al reproductor \"${playerName}\"?",
+ 	 	 	 	"trans": "Enviar ${donationName} marco de chat de donación (costo ${price} unidad) al reproductor \"${playerName}\"?",
  	 	 	 	"eng": "Send ${donationName} donation chat frame (cost ${price} Unit) to player \"${playerName}\"?"
  	 	 	},
  	 	 	"description": {
@@ -7362,7 +7362,7 @@
  	 	 	 	"donationName",
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Has enviado con éxito ${donationName} Frame de chat de donación al jugador \"${playerName}\"",
+ 	 	 	"trans": "Has enviado con éxito ${donationName} marco de chat de donación al jugador \"${playerName}\"",
  	 	 	"eng": "You have successfully sent ${donationName} donation chat frame to player \"${playerName}\""
  	 	},
  	 	"hasDonation": {
