--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -1266,7 +1266,7 @@
  	 	 	 	"eng": "Suspended"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Tu cuenta ha sido suspendida automáticamente por el sistema debido a una actividad sospechosa",
+ 	 	 	 	"trans": "Tu cuenta ha sido suspendida automáticamente por el sistema debido a actividad inusual",
  	 	 	 	"eng": "Your account has been suspended automatically by the system due to Unusual Activity"
  	 	 	},
  	 	 	"possibleReasons": {
@@ -1275,7 +1275,7 @@
  	 	 	 	 	"eng": "This could be caused by:"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "1. Creaste varias cuentas para ganar ventajas injustas",
+ 	 	 	 	 	"trans": "1. Has creado múltiples cuentas para ganar ventajas injustas",
  	 	 	 	 	"eng": "1. You created multiple accounts to gain unfair advantage"
  	 	 	 	},
  	 	 	 	"3": {
@@ -2009,7 +2009,7 @@
  	 	 	 	"eng": "Cyberpunk Text-based MMORPG"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "CyberCode Online es un juego en línea, por lo tanto es necesario que tengas una cuenta para almacenar tus datos del juego.",
+ 	 	 	 	"trans": "CyberCode Online es un juego en línea, una cuenta es necesaria para guardar los datos del juego.",
  	 	 	 	"eng": "CyberCode Online is an online game, an account is needed to store game data."
  	 	 	},
  	 	 	"description2": {
@@ -2096,7 +2096,7 @@
  	 	 	 	"eng": "Forgot Password?"
  	 	 	},
  	 	 	"registerPageButton": {
- 	 	 	 	"trans": "¿Registrar nueva Cuenta?",
+ 	 	 	 	"trans": "¿Crear Cuenta?",
  	 	 	 	"eng": "Create Account?"
  	 	 	}
  	 	},
@@ -2157,7 +2157,7 @@
  	 	},
  	 	"register": {
  	 	 	"registerButton": {
- 	 	 	 	"trans": "Crear una Cuenta",
+ 	 	 	 	"trans": "Crear Cuenta",
  	 	 	 	"eng": "Create Account"
  	 	 	},
  	 	 	"loginPageButton": {
